Handling to prevent duplicate users

--- a/TextMe/templates/register.html
+++ b/TextMe/templates/register.html
@@ -1,10 +1,17 @@
 <html>
 {% from "_formhelpers.html" import render_field %}
 <form method="POST" action="/register">
+  {% with messages = get_flashed_messages() %}
+    {% if messages %}
+      {% for message in messages %}
+        <li> {{message}} </li>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
   {{ form.csrf_token }}
-  {{ form.username.label }} {{ form.username }}
-  {{ form.password.label }} {{ form.password }}
-  {{ form.password_confirm.label}}  {{ form.password_confirm }}
+  {{ render_field(form.username )}}
+  {{ render_field(form.password) }}
+  {{ render_field(form.password_confirm) }}
   <input type="submit" value="Submit">
 </form>
 </html>
