Added login functionality

--- a/TextMe/templates/login.html
+++ b/TextMe/templates/login.html
@@ -1,6 +1,6 @@
 <html>
 {% from "_formhelpers.html" import render_field %}
-<form method="POST" action="/register">
+<form method="POST" action="/login">
   {% with messages = get_flashed_messages() %}
     {% if messages %}
       {% for message in messages %}
@@ -11,8 +11,6 @@
   {{ form.csrf_token }}
   {{ render_field(form.username )}}
   {{ render_field(form.password) }}
-  {{ render_field(form.password_confirm) }}
   <input type="submit" value="Submit">
-  <a href="{{url_for('login')}}">Log in</a>
 </form>
 </html>
